--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\""
   },
   "dependencies": {
-    "@mantine/core": "^7.0.2",
-    "@mantine/form": "^7.0.2",
-    "@mantine/hooks": "^7.0.2",
-    "@mantine/notifications": "^7.0.2",
+    "@mantine/core": "^7.1.0",
+    "@mantine/form": "^7.1.0",
+    "@mantine/hooks": "^7.1.0",
+    "@mantine/notifications": "^7.1.0",
+    "@phosphor-icons/react": "^2.0.13",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
-    "clsx": "^2.0.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-router-dom": "^6.16.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
