--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mantine/hooks": "^7.1.0",
     "@mantine/notifications": "^7.1.0",
     "@phosphor-icons/react": "^2.0.13",
+    "@react-oauth/google": "^0.11.1",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
+    "axios": "^1.5.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
