--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.5.1",
     "prettier": "^3.0.3",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
+    "@types/qs": "^6.9.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "@vitejs/plugin-react-swc": "^3.3.2",
