--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-infinite-scroller": "^1.2.6",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "^20.7.0",
