--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx}\""
   },
   "dependencies": {
-    "@mantine/core": "^7.1.1",
-    "@mantine/form": "^7.1.1",
-    "@mantine/hooks": "^7.1.1",
-    "@mantine/notifications": "^7.1.1",
+    "@mantine/core": "^7.1.2",
+    "@mantine/form": "^7.1.2",
+    "@mantine/hooks": "^7.1.2",
+    "@mantine/modals": "^7.1.2",
+    "@mantine/notifications": "^7.1.2",
     "@phosphor-icons/react": "^2.0.13",
     "@react-oauth/google": "^0.11.1",
     "@tanstack/react-query": "^4.35.3",
