--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.6.3",
     "@types/node": "^20",
     "@types/qs": "^6.9.8",
     "@types/react": "^18",
